<resources>
    <string name="app_name">구름티비</string>
    <string name="title_home">홈</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user">마이 페이지</string>

    <string name="player_activity_name">PlayerActivity</string>


    <string name="title_login">로그인</string>
    <string name="title_id">이메일</string>
    <string name="title_password">비밀번호</string>
    <string name="title_go_to_register">계정 만들기</string>
    <string name="title_go_to_login">로그인하러 가기</string>
    <string name="title_register">가입하기</string>

    <string name="login_fragment_label">Login Fragment</string>
    <string name="logout_fragment_label">Logout Fragment</string>

    <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/Jazz_In_Paris.mp3</string>
    <!-- Big Buck Bunny video provided by the Blender Foundation.
  (c) copyright 2008, Blender Foundation / www.bigbuckbunny.org -->
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
    <string name="title_activity_account_setting">AccountSettingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_my_video">MyVideoActivity</string>
    <string name="title_activity_upload_video">UploadVideoActivity</string>
</resources>